--- a/page1.html
+++ b/page1.html
@@ -11,33 +11,33 @@
   <li><a href=# onclick="myFunction()">Operator Options</a></li>
   <li><a href=# onclick="myFunction()">Order Options</a></li>
   <li><a href=# onclick="forhereswitch()"><p3 id="switch"></p3></a></li>
-  <li><a href=# onclick="myFunction()">Loyalty<br> -</a></li>
+  <li><a href=# onclick="myFunction()">Loyalty</a></li>
   <li><br><p2 id="forhere"></p2><br><br><p1>Order # 696969</p1></li>
 </ul>
-
+<div class="page" id="page1">
 <br>
 <div class="split left" id="food">
 <a>
-<button class="button" onclick="cinnabuns()">CINNAMON BUNS</button>
-<button class="button">PASTRIES</button>
-<button style="border-color: #33CCFF" class="button">NO TAX PASTRIES</button>
-<button class="button">SAVOURY</button>
-<button class="button">ICING</button>
+<button class="button" onclick="food1()">CINNAMON BUNS</button>
+<button class="button" onclick="food2()">PASTRIES</button>
+<button style="border-color: #33CCFF" class="button" onclick="food3()">NO TAX PASTRIES</button>
+<button class="button" onclick="food4()">SAVOURY</button>
+<button class="button" onclick="food5()">ICING</button>
 </a>
 </div>
 
 <div class="split left" id="hotdrinks">
 <a>
-<button class="button">BREWED COFFEE</button>
-<button class="button">FRENCH PRESS</button>
-<button class="button">SHOT IN THE DARK</button>
-<button class="button">CAFE AU LAIT</button> <br> <br>
+<button class="button" onclick="hotdrinks1()">BREWED COFFEE</button>
+<button class="button" onclick="hotdrinks2()">FRENCH PRESS</button>
+<button class="button" onclick="hotdrinks3()">SHOT IN THE DARK</button>
+<button class="button" onclick="hotdrinks4()">CAFE AU LAIT</button> <br> <br>
 
-<button class="button" style="border-color: #E15DF0">TEA</button>
-<button class="button" style="border-color: #E15DF0">LONDON FOG</button>
-<button class="button" style="border-color: #E15DF0">TEA LATTE</button>
-<button class="button" style="border-color: #E15DF0">CHAI TEA LATTE</button>
-<button class="button" style="border-color: #E15DF0">MATCHA LATTE</button> <br><br>
+<button class="button" onclick="hotdrinks5()" style="border-color: #E15DF0">TEA</button>
+<button class="button" onclick="hotdrinks6()" style="border-color: #E15DF0">LONDON FOG</button>
+<button class="button" onclick="hotdrinks7()" style="border-color: #E15DF0">TEA LATTE</button>
+<button class="button" onclick="hotdrinks8()" style="border-color: #E15DF0">CHAI TEA LATTE</button>
+<button class="button" onclick="hotdrinks9()" style="border-color: #E15DF0">MATCHA LATTE</button> <br><br>
 
 <button class="button" style="border-color: #F0C65D">AMERICANO/<br style="margin-top: 2px;">LONG<br style="margin-top: 2px;">BLACK</button>
 <button class="button" style="border-color: #F0C65D">AMER CON MISTO</button>
@@ -130,8 +130,208 @@
 </a>
 </div>
 
-<br><br><br><br><br>
 
+
+<div class="split left" id="cinnamonbuns">
+<a>
+<button class="button">Cinn <br style="margin-top: 1px"> Bun <br style="margin-top: 1px"> Single</button>
+<button class="button">Cinn <br style="margin-top: 1px"> Bun <br style="margin-top: 1px"> 4 Pack</button>
+<button class="button">Cinn <br style="margin-top: 1px"> Bun <br style="margin-top: 1px"> 6 Pack</button>
+<button class="button">Cinn <br style="margin-top: 1px"> Bun <br style="margin-top: 1px"> 13 to 23</button>
+<button class="button">Cinn <br style="margin-top: 1px"> Bun <br style="margin-top: 1px"> 24 to 27</button> <br> <br>
+
+<button class="button">Cinn Bun<br style="margin-top: 1px"> 48 <br style="margin-top: 1px"> or More </button>
+<button class="button"> Bunnies </button>
+<button class="button">Heart<br style="margin-top: 1px"> Buns </button>
+<button class="button">Birthday<br style="margin-top: 1px"> Buns </button>
+<button class="button">Frozen<br style="margin-top: 1px"> Buns <br style="margin-top: 1px"> 24 (1Case) </button> <br><br>
+
+<button class="button">Frozen<br style="margin-top: 1px"> Buns 24 (2<br style="margin-top: 1px"> cases or <br style="margin-top: 1px"> more) </button>
+<button class="button">Frozen<br style="margin-top: 1px"> Buns <br style="margin-top: 1px"> 32 (1Case) </button>
+<button class="button">Frozen<br style="margin-top: 1px"> Buns 32 (2<br style="margin-top: 1px"> cases or <br style="margin-top: 1px"> more) </button>
+<button class="button">Icing<br style="margin-top: 1px"> 1 oz </button>
+<button class="button">Icing<br style="margin-top: 1px"> 4 oz </button> <br><br>
+
+<button class="button">Icing<br style="margin-top: 1px"> 8 oz </button> 
+<button class="button">Icing<br style="margin-top: 1px"> 12 oz </button> 
+<button class="button">Icing<br style="margin-top: 1px"> 16 oz </button> 
+<button class="button">Icing<br style="margin-top: 1px"> 20 oz </button> 
+<button class="button">Bun<br style="margin-top: 1px"> Huts </button> <br><br>
+
+<button class="button">4 <br style="margin-top: 1px"> Pack <br style="margin-top: 1px"> Box</button>
+<button class="button">6 <br style="margin-top: 1px"> Pack <br style="margin-top: 1px"> Box</button>
+<button class="button" style="border-color: #33CCFF">Cinn Bun 4 <br style="margin-top: 1px"> Pack <br style="margin-top: 1px"> NO TAX</button>
+<button class="button" style="border-color: #33CCFF">Cinn Bun<br style="margin-top: 1px"> Single <br style="margin-top: 1px"> NO TAX</button>
+<button class="button">Cutting <br style="margin-top: 1px"> Charge <br style="margin-top: 1px"> x Qty</button> <br><br>
+
+<button class="button">Shrink <br style="margin-top: 1px"> Wrapping <br style="margin-top: 1px"> Fee x <br style="margin-top: 1px"> Qty</button>
+<button class="button" style="border-color: #4FB83D">City of <br style="margin-top: 1px"> Vancouver <br style="margin-top: 1px"> Bag <br style="margin-top: 1px"> Fee</button>
+</a>
+</div>
+
+<div class="split left" id="pastries">
+<a>
+<button class="button">Healthy <br style="margin-top: 1px"> Flax <br style="margin-top: 1px"> Muffin</button>
+<button class="button">Superfruit<br style="margin-top: 1px"> Muffin</button>
+<button class="button">Espresso <br style="margin-top: 1px"> Choc <br style="margin-top: 1px"> Banana Muffin</button>
+<button class="button">Iced <br style="margin-top: 1px"> Flax <br style="margin-top: 1px"> Muffin</button>
+<button class="button" style="border-color: #287326">Veganberry<br style="margin-top: 1px"> Muffin</button> <br><br>
+
+<button class="button">Butter<br style="margin-top: 1px">Croissant</button>
+<button class="button">Baked <br style="margin-top: 1px"> Fruit <br style="margin-top: 1px"> Fritter</button>
+<button class="button">Chocolate <br style="margin-top: 1px"> Chip <br style="margin-top: 1px"> Cookie</button>
+<button class="button">Oatmeal <br style="margin-top: 1px"> Raisin <br style="margin-top: 1px"> Cookie</button>
+<button class="button">Lemon<br style="margin-top: 1px"> Bomb</button> <br><br>
+
+<button class="button" style="border-color: #287326">Vegan<br style="margin-top: 1px">Brownie</button>
+<button class="button">2 for 1<br style="margin-top: 1px"> Healthy <br style="margin-top: 1px"> Flax Muffin</button>
+<button class="button">2 for 1<br style="margin-top: 1px"> Superfruit <br style="margin-top: 1px"> Muffin</button>
+<button class="button">2 for 1<br style="margin-top: 1px"> Espresso <br style="margin-top: 1px"> Muffin</button>
+<button class="button">2 for 1<br style="margin-top: 1px"> Iced <br style="margin-top: 1px"> Flax Muffin</button> <br><br>
+
+<button class="button" style="border-color: #287326">2 for 1<br style="margin-top: 1px"> Veganberry <br style="margin-top: 1px"> Muffin</button>
+<button class="button" style="border-color: #4FB83D">City of <br style="margin-top: 1px"> Vancouver <br style="margin-top: 1px"> Bag <br style="margin-top: 1px"> Fee</button>
+</a>
+</div>
+
+<div class="split left" id="notaxpastries">
+<a>
+<button class="button" style="border-color: #33CCFF">Healthy Flax<br style="margin-top: 1px"> Muffin <br style="margin-top: 1px"> NO TAX</button>
+<button class="button" style="border-color: #33CCFF">Superfruit<br style="margin-top: 1px"> Muffin <br style="margin-top: 1px"> NO TAX</button>
+<button class="button" style="border-color: #33CCFF">Espresso <br style="margin-top: 1px"> Choc Banana<br style="margin-top: 1px"> Muffin <br style="margin-top: 1px"> NO TAX</button>
+<button class="button" style="border-color: #33CCFF">Iced Flax <br style="margin-top: 1px"> Muffin<br style="margin-top: 1px"> NO TAX</button>
+<button class="button" style="border-color: #287326">Veganberry<br style="margin-top: 1px"> Muffin <br style="margin-top: 1px"> NO TAX</button> <br><br>
+
+<button class="button" style="border-color: #33CCFF">Butter<br style="margin-top: 1px">Croissant<br style="margin-top: 1px">NO<br style="margin-top: 1px">TAX</button>
+<button class="button" style="border-color: #33CCFF">Baked Fruit <br style="margin-top: 1px"> Fritter<br style="margin-top: 1px">NO TAX</button>
+<button class="button" style="border-color: #33CCFF">Chocolate <br style="margin-top: 1px"> Chip <br style="margin-top: 1px"> Cookie NO TAX</button>
+<button class="button" style="border-color: #33CCFF">Oatmeal <br style="margin-top: 1px"> Raisin <br style="margin-top: 1px"> Cookie NO TAX</button>
+<button class="button" style="border-color: #33CCFF">Lemon<br style="margin-top: 1px"> Bomb<br style="margin-top: 1px">NO TAX</button> <br><br>
+
+<button class="button" style="border-color: #287326">Vegan<br style="margin-top: 1px">Brownie<br style="margin-top: 1px">NO TAX</button>
+<button class="button" style="border-color: #33CCFF">2 for 1<br style="margin-top: 1px"> Healthy <br style="margin-top: 1px"> Flax Muffin<br style="margin-top: 1px">NO TAX</button>
+<button class="button" style="border-color: #33CCFF">2 for 1<br style="margin-top: 1px"> Superfruit <br style="margin-top: 1px"> Muffin<br style="margin-top: 1px">NO TAX</button>
+<button class="button" style="border-color: #33CCFF">2 for 1<br style="margin-top: 1px"> Espresso <br style="margin-top: 1px"> Muffin NO TAX</button>
+<button class="button" style="border-color: #33CCFF">2 for 1<br style="margin-top: 1px"> Iced Flax<br style="margin-top: 1px"> Muffin NO TAX</button> <br><br>
+
+<button class="button" style="border-color: #287326">2 for 1<br style="margin-top: 1px"> Veganberry <br style="margin-top: 1px"> Muffin<br style="margin-top: 1px">NO TAX</button>
+<button class="button" style="border-color: #4FB83D">City of <br style="margin-top: 1px"> Vancouver <br style="margin-top: 1px"> Bag <br style="margin-top: 1px"> Fee</button>
+</a>
+</div>
+
+<div class="split left" id="savoury">
+<a>
+<button class="button">Breakfast <br style="margin-top: 1px"> Bun </button>
+<button class="button">Calzone <br style="margin-top: 1px"> Pepperoni </button>
+<button class="button">C.L.T.<br style="margin-top: 1px">Sandwich</button>
+<button class="button">Flat Bread <br style="margin-top: 1px"> Slice </button>
+<button class="button">Grilled <br style="margin-top: 1px"> Cheese </button> <br><br>
+
+<button class="button">Wrap<br style="margin-top: 1px">Breakfast</button>
+<button class="button">Wrap Thai<br style="margin-top: 1px"> Chicken </button>
+<button class="button" style="border-color: #287326">Vegan<br style="margin-top: 1px">Cheese Bun</button>
+<button class="button" style="border-color: #287326">Vegan<br style="margin-top: 1px">Chive Melt</button>
+<button class="button" style="border-color: #287326">Vegan<br style="margin-top: 1px">Shepherd's <br style="margin-top: 1px">Pie</button> <br><br>
+
+<button class="button" style="border-color: #287326">Vegan<br style="margin-top: 1px">Samosa</button>
+<button class="button" style="border-color: #287326">Vegan Tofu<br style="margin-top: 1px">Scramble</button>
+<button class="button" style="border-color: #287326">Wrap Vegan<br style="margin-top: 1px">Veggie</button>
+<button class="button" style="border-color: #4FB83D">City of <br style="margin-top: 1px"> Vancouver <br style="margin-top: 1px"> Bag <br style="margin-top: 1px"> Fee</button>
+</a>
+</div>
+
+<div class="split left" id="icing">
+<a>
+<button class="button">Icing<br style="margin-top: 1px">16 oz</button>
+<button class="button" style="border-color: #4FB83D">City of <br style="margin-top: 1px"> Vancouver <br style="margin-top: 1px"> Bag <br style="margin-top: 1px"> Fee</button>
+</a>
+</div>
+
+<div class="split left" id="brewedcoffee">
+<a>
+<button class="button">Coffee<br style="margin-top: 1px">8 oz</button>
+<button class="button">Coffee<br style="margin-top: 1px">12 oz</button>
+<button class="button">Coffee<br style="margin-top: 1px">16 oz</button>
+<button class="button">Coffee<br style="margin-top: 1px">20 oz</button>
+<button class="button">Coffee<br style="margin-top: 1px">Refill</button> <br><br>
+
+<button class="button">96oz Coffee<br style="margin-top: 1px">Carafe<br style="margin-top: 1px">(10 sm<br style="margin-top: 1px">coffees)</button>
+
+</a>
+</div>
+
+<div class="split left" id="frenchpress">
+<a>
+<button class="button">French<br style="margin-top: 1px">Press 8 oz</button>
+<button class="button">French<br style="margin-top: 1px">Press<br style="margin-top: 1px">12 oz</button>
+<button class="button">French<br style="margin-top: 1px">Press<br style="margin-top: 1px">16 oz</button>
+<button class="button">French<br style="margin-top: 1px">Press<br style="margin-top: 1px">20 oz</button>
+</a>
+</div>
+
+<div class="split left" id="shotinthedark">
+<a>
+<button class="button">Shot in the<br style="margin-top: 1px">Dark 8 oz</button>
+<button class="button">Shot in the<br style="margin-top: 1px">Dark 12 oz</button>
+<button class="button">Shot in the<br style="margin-top: 1px">Dark 16 oz</button>
+<button class="button">Shot in the<br style="margin-top: 1px">Dark 20 oz</button>
+</a>
+</div>
+
+<div class="split left" id="cafeaulait">
+<a>
+<button class="button">Cafe Au<br style="margin-top: 1px">Lait 8 oz</button>
+<button class="button">Cafe Au<br style="margin-top: 1px">Lait 12 oz</button>
+<button class="button">Cafe Au<br style="margin-top: 1px">Lait 16 oz</button>
+<button class="button">Cafe Au<br style="margin-top: 1px">Lait 20 oz</button>
+</a>
+</div>
+
+<div class="split left" id="tea">
+<a>
+<button class="button" style="border-color: #E15DF0">Tea<br style="margin-top: 1px">8<br style="margin-top: 1px">oz</button>
+<button class="button" style="border-color: #E15DF0">Tea<br style="margin-top: 1px">12<br style="margin-top: 1px">oz</button>
+<button class="button" style="border-color: #E15DF0">Tea<br style="margin-top: 1px">16<br style="margin-top: 1px">oz</button>
+<button class="button" style="border-color: #E15DF0">Tea<br style="margin-top: 1px">20<br style="margin-top: 1px">oz</button>
+<button class="button">96 oz Hot<br style="margin-top: 1px">Water<br style="margin-top: 1px">(includes 10<br style="margin-top: 1px">tea bags)</button>
+</a>
+</div>
+
+<div class="split left" id="londonfog">
+<a>
+<button class="button" style="border-color: #E15DF0">London<br style="margin-top: 1px">Fog 8 oz</button>
+<button class="button" style="border-color: #E15DF0">London<br style="margin-top: 1px">Fog 12 oz</button>
+<button class="button" style="border-color: #E15DF0">London<br style="margin-top: 1px">Fog 16 oz</button>
+<button class="button" style="border-color: #E15DF0">London<br style="margin-top: 1px">Fog 20 oz</button>
+</a>
+</div>
+
+<div class="split left" id="tealatte">
+<a>
+<button class="button" style="border-color: #E15DF0">Tea<br style="margin-top: 1px">Latte 8 oz</button>
+<button class="button" style="border-color: #E15DF0">Tea<br style="margin-top: 1px">Latte 12 oz</button>
+<button class="button" style="border-color: #E15DF0">Tea<br style="margin-top: 1px">Latte 16 oz</button>
+<button class="button" style="border-color: #E15DF0">Tea<br style="margin-top: 1px">Latte 20 oz</button>
+</a>
+</div>
+
+<div class="split left" id="chaitealatte">
+<a>
+<button class="button" style="border-color: #E15DF0">Chai Tea<br style="margin-top: 1px">Latte 8 oz</button>
+<button class="button" style="border-color: #E15DF0">Chai Tea<br style="margin-top: 1px">Latte 12 oz</button>
+<button class="button" style="border-color: #E15DF0">Chai Tea<br style="margin-top: 1px">Latte 16 oz</button>
+<button class="button" style="border-color: #E15DF0">Chai Tea<br style="margin-top: 1px">Latte 20 oz</button>
+</a>
+</div>
+
+<div class="split left" id="matchalatte">
+<a>
+<button class="button" style="border-color: #E15DF0">Matcha<br style="margin-top: 1px">Latte 8 oz</button>
+<button class="button" style="border-color: #E15DF0">Matcha<br style="margin-top: 1px">Latte 12 oz</button>
+<button class="button" style="border-color: #E15DF0">Matcha<br style="margin-top: 1px">Latte 16 oz</button>
+<button class="button" style="border-color: #E15DF0">Matcha<br style="margin-top: 1px">Latte 20 oz</button>
+</a>
+</div>
 
 <div class="split right">
   <div class="box">
@@ -174,7 +374,7 @@
   Order
   </button>
   </div>
-  </div>
+</div>
 
 <div class="navbar" id="firstbottom">
 <b>
@@ -197,7 +397,44 @@
   <a href=# id="bottombar8" onclick="purplebottom8()">WHOLE<br style="margin: 0px">SALE</a>
 </b>
 </div>
+
+<div class="navbar" id="foodbottom">
+<b>
+  <a href=# class="gray" onclick="purplebottom1()"><br><img src="arrowup.png" style="width: 33px;"></a>
+  <a href=# id="foodbar1" onclick="food1()">CINNAMON BUNS</a>
+  <a href=# id="foodbar2" onclick="food2()">PASTRIES</a>
+  <a href=# id="foodbar3" onclick="food3()">NO TAX PASTRIES</a>
+  <a href=# id="foodbar4" onclick="food4()">SAVOURY</a>
+  <a href=# id="foodbar5" onclick="food5()">ICING</a>
+</b>
 </div>
+
+<div class="navbar" id="hotdrinksbottom1">
+<b>
+  <a href=# class="gray" onclick="purplebottom2()"><br><img src="arrowup.png" style="width: 33px;"></a>
+  <a href=# id="hotdrinksbar1" onclick="hotdrinks1()">BREWED COFFEE</a>
+  <a href=# id="hotdrinksbar2" onclick="hotdrinks2()">FRENCH PRESS</a>
+  <a href=# id="hotdrinksbar3" onclick="hotdrinks3()">SHOT IN THE DARK</a>
+  <a href=# id="hotdrinksbar4" onclick="hotdrinks4()">CAFE AU LAIT</a>
+  <a href=# onclick="" style="border-color: white;"></a>
+  <a href=# class="gray" onclick="grayhotdrinks2()"><img src="arrowright.png" style="width: 40px;"></a>
+</b>
+</div>
+
+<div class="navbar" id="hotdrinksbottom2">
+<b>
+  <a href=# class="gray" onclick="purplebottom2()"><br><img src="arrowup.png" style="width: 33px;"></a>
+  <a href=# id="hotdrinksbar5" onclick="hotdrinks5()">TEA</a>
+  <a href=# id="hotdrinksbar6" onclick="hotdrinks6()">LONDON FOG</a>
+  <a href=# id="hotdrinksbar7" onclick="hotdrinks7()">TEA LATTE</a>
+  <a href=# id="hotdrinksbar8" onclick="hotdrinks8()">CHAI TEA LATTE</a>
+  <a href=# id="hotdrinksbar9" onclick="hotdrinks9()">MATCHA LATTE</a>
+  <a href=# class="gray" onclick="graybottom1()"><img src="arrowright.png" style="width: 40px;"></a>
+</b>
+</div>
+
+</div>
+
 <script src="myscripts.js"></script>
 </body>
 </html>	
