drink section options

--- a/page1.html
+++ b/page1.html
@@ -39,22 +39,22 @@
 <button class="button" onclick="hotdrinks8()" style="border-color: #E15DF0">CHAI TEA LATTE</button>
 <button class="button" onclick="hotdrinks9()" style="border-color: #E15DF0">MATCHA LATTE</button> <br><br>
 
-<button class="button" style="border-color: #F0C65D">AMERICANO/<br style="margin-top: 2px;">LONG<br style="margin-top: 2px;">BLACK</button>
-<button class="button" style="border-color: #F0C65D">AMER CON MISTO</button>
-<button class="button" style="border-color: #F0C65D">ESPRESSO</button>
-<button class="button" >BREVE</button>
-<button class="button" >EGGNOG LATTE</button> <br><br>
+<button class="button" onclick="hotdrinks10()" style="border-color: #F0C65D">AMERICANO/<br style="margin-top: 2px;">LONG<br style="margin-top: 2px;">BLACK</button>
+<button class="button" onclick="hotdrinks11()" style="border-color: #F0C65D">AMER CON MISTO</button>
+<button class="button" onclick="hotdrinks12()" style="border-color: #F0C65D">ESPRESSO</button>
+<button class="button" onclick="hotdrinks13()">BREVE</button>
+<button class="button" onclick="hotdrinks14()">EGGNOG LATTE</button> <br><br>
 
-<button class="button">LATTE/FLAT<br style="margin-top: 2px;">WHITE/<br style="margin-top: 2px;">CORTADO</button>
-<button class="button" >CAPPUCCINO</button>
-<button class="button" >CARAMEL MACCHIATO</button>
-<button class="button" >MOCHA</button>
-<button class="button" >PUMPKIN SPICE LATTE</button> <br><br>
+<button class="button" onclick="hotdrinks15()">LATTE/FLAT<br style="margin-top: 2px;">WHITE/<br style="margin-top: 2px;">CORTADO</button>
+<button class="button" onclick="hotdrinks16()">CAPPUCCINO</button>
+<button class="button" onclick="hotdrinks17()">CARAMEL MACCHIATO</button>
+<button class="button" onclick="hotdrinks18()">MOCHA</button>
+<button class="button" onclick="hotdrinks19()">PUMPKIN SPICE LATTE</button> <br><br>
 
-<button class="button" style="border-color: #33CCFF">STEAMED MILK</button>
-<button class="button" style="border-color: #33CCFF">HOT CHOCOLATE</button>
-<button class="button" style="border-color: #33CCFF">CARAMEL APPLE CIDER</button>
-<button class="button" style="border-color: #33CCFF">HOT WATER</button> <br><br>
+<button class="button" onclick="hotdrinks20()" style="border-color: #33CCFF">STEAMED MILK</button>
+<button class="button" onclick="hotdrinks21()" style="border-color: #33CCFF">HOT CHOCOLATE</button>
+<button class="button" onclick="hotdrinks22()" style="border-color: #33CCFF">CARAMEL APPLE CIDER</button>
+<button class="button" onclick="hotdrinks23()" style="border-color: #33CCFF">HOT WATER</button> <br><br>
 
 <button class="button" style="border-color: black">CORTADO</button>
 <button class="button" style="border-color: black">FLAT WHITE</button>
@@ -247,6 +247,7 @@
 </a>
 </div>
 
+
 <div class="split left" id="brewedcoffee">
 <a>
 <button class="button">Coffee<br style="margin-top: 1px">8 oz</button>
@@ -286,6 +287,7 @@
 <button class="button">Cafe Au<br style="margin-top: 1px">Lait 20 oz</button>
 </a>
 </div>
+
 
 <div class="split left" id="tea">
 <a>
@@ -330,6 +332,137 @@
 <button class="button" style="border-color: #E15DF0">Matcha<br style="margin-top: 1px">Latte 12 oz</button>
 <button class="button" style="border-color: #E15DF0">Matcha<br style="margin-top: 1px">Latte 16 oz</button>
 <button class="button" style="border-color: #E15DF0">Matcha<br style="margin-top: 1px">Latte 20 oz</button>
+</a>
+</div>
+
+
+<div class="split left" id="americano">
+<a>
+<button class="button" style="border-color: #F0C65D">Americano<br style="margin-top: 1px">8 oz</button>
+<button class="button" style="border-color: #F0C65D">Americano<br style="margin-top: 1px">12 oz</button>
+<button class="button" style="border-color: #F0C65D">Americano<br style="margin-top: 1px">16 oz</button>
+<button class="button" style="border-color: #F0C65D">Americano<br style="margin-top: 1px">20 oz</button>
+<button class="button" style="border-color: #F0C65D">Long Black<br style="margin-top: 1px">6 oz</button>
+</a>
+</div>
+
+<div class="split left" id="amerconmisto">
+<a>
+<button class="button" style="border-color: #F0C65D">Americano<br style="margin-top: 1px">Con<br style="margin-top: 1px">8 oz</button>
+<button class="button" style="border-color: #F0C65D">Americano<br style="margin-top: 1px">Con<br style="margin-top: 1px">12 oz</button>
+<button class="button" style="border-color: #F0C65D">Americano<br style="margin-top: 1px">Con<br style="margin-top: 1px">16 oz</button>
+<button class="button" style="border-color: #F0C65D">Americano<br style="margin-top: 1px">Con<br style="margin-top: 1px">20 oz</button>
+</a>
+</div>
+
+<div class="split left" id="espresso">
+<a>
+<button class="button" style="border-color: #F0C65D">Espresso<br style="margin-top: 1px">1 Shot</button>
+<button class="button" style="border-color: #F0C65D">Espresso<br style="margin-top: 1px">2 Shot</button>
+<button class="button" style="border-color: #F0C65D">Espresso<br style="margin-top: 1px">Con<br style="margin-top: 1px">Panna 1 Shot</button>
+<button class="button" style="border-color: #F0C65D">Espresso<br style="margin-top: 1px">Con<br style="margin-top: 1px">Panna 2 Shot</button>
+<button class="button" style="border-color: #F0C65D">Espresso<br style="margin-top: 1px">Macchiato<br style="margin-top: 1px">1 Shot</button> <br><br>
+
+<button class="button" style="border-color: #F0C65D">Espresso<br style="margin-top: 1px">Macchiato<br style="margin-top: 1px">2 Shot</button>
+</a>
+</div>
+
+<div class="split left" id="breve">
+<a>
+<button class="button" style="border-color: red">Cafe Breve<br style="margin-top: 1px">8 oz</button>
+<button class="button" style="border-color: red">Cafe Breve<br style="margin-top: 1px">12 oz</button>
+<button class="button" style="border-color: red">Cafe Breve<br style="margin-top: 1px">16 oz</button>
+<button class="button" style="border-color: red">Cafe Breve<br style="margin-top: 1px">20 oz</button>
+</a>
+</div>
+
+<div class="split left" id="eggnoglatte">
+<a>
+<button class="button" style="border-color: red">Eggnog<br style="margin-top: 1px">Latte 8 oz</button>
+<button class="button" style="border-color: red">Eggnog<br style="margin-top: 1px">Latte 12 oz</button>
+<button class="button" style="border-color: red">Eggnog<br style="margin-top: 1px">Latte 16 oz</button>
+<button class="button" style="border-color: red">Eggnog<br style="margin-top: 1px">Latte 20 oz</button>
+</a>
+</div>
+
+<div class="split left" id="latte">
+<a>
+<button class="button" style="border-color: red">Caffe Latte<br style="margin-top: 1px">8 oz</button>
+<button class="button" style="border-color: red">Caffe Latte<br style="margin-top: 1px">12 oz</button>
+<button class="button" style="border-color: red">Caffe Latte<br style="margin-top: 1px">16 oz</button>
+<button class="button" style="border-color: red">Caffe Latte<br style="margin-top: 1px">20 oz</button>
+<button class="button" style="border-color: red">Flat White<br style="margin-top: 1px">8 oz</button> <br><br>
+
+<button class="button" style="border-color: red">Cortado<br style="margin-top: 1px">4 oz</button>
+</a>
+</div>
+
+<div class="split left" id="cappuccino">
+<a>
+<button class="button" style="border-color: red">Cappuccino<br style="margin-top: 1px">8 oz</button>
+<button class="button" style="border-color: red">Cappuccino<br style="margin-top: 1px">12 oz</button>
+<button class="button" style="border-color: red">Cappuccino<br style="margin-top: 1px">16 oz</button>
+<button class="button" style="border-color: red">Cappuccino<br style="margin-top: 1px">20 oz</button>
+</a>
+</div>
+
+<div class="split left" id="caramelmacchiato">
+<a>
+<button class="button" style="border-color: red">Caramel<br style="margin-top: 1px">Macchiato<br style="margin-top: 1px">8 oz</button>
+<button class="button" style="border-color: red">Caramel<br style="margin-top: 1px">Macchiato<br style="margin-top: 1px">12 oz</button>
+<button class="button" style="border-color: red">Caramel<br style="margin-top: 1px">Macchiato<br style="margin-top: 1px">16 oz</button>
+<button class="button" style="border-color: red">Caramel<br style="margin-top: 1px">Macchiato<br style="margin-top: 1px">20 oz</button>
+</a>
+</div>
+
+<div class="split left" id="mocha">
+<a>
+<button class="button" style="border-color: red">Mocha<br style="margin-top: 1px">8 oz</button>
+<button class="button" style="border-color: red">Mocha<br style="margin-top: 1px">12 oz</button>
+<button class="button" style="border-color: red">Mocha<br style="margin-top: 1px">16 oz</button>
+<button class="button" style="border-color: red">Mocha<br style="margin-top: 1px">20 oz</button>
+</a>
+</div>
+
+<div class="split left" id="pumpkinspicelatte">
+<a>
+<button class="button" style="border-color: red">Pumpkin<br style="margin-top: 1px">Spice<br style="margin-top: 1px">Latte 8 oz</button>
+<button class="button" style="border-color: red">Pumpkin<br style="margin-top: 1px">Spice<br style="margin-top: 1px">Latte 12 oz</button>
+<button class="button" style="border-color: red">Pumpkin<br style="margin-top: 1px">Spice<br style="margin-top: 1px">Latte 16 oz</button>
+<button class="button" style="border-color: red">Pumpkin<br style="margin-top: 1px">Spice<br style="margin-top: 1px">Latte 20 oz</button>
+</a>
+</div>
+
+<div class="split left" id="steamedmilk">
+<a>
+<button class="button" style="border-color: #33CCFF">Steamed<br style="margin-top: 1px">Milk 8 oz</button>
+<button class="button" style="border-color: #33CCFF">Steamed<br style="margin-top: 1px">Milk 12 oz</button>
+<button class="button" style="border-color: #33CCFF">Steamed<br style="margin-top: 1px">Milk 16 oz</button>
+<button class="button" style="border-color: #33CCFF">Steamed<br style="margin-top: 1px">Milk 20 oz</button>
+</a>
+</div>
+
+<div class="split left" id="hotchocolate">
+<a>
+<button class="button" style="border-color: #33CCFF">Hot<br style="margin-top: 1px">Chocolate<br style="margin-top: 1px">8 oz</button>
+<button class="button" style="border-color: #33CCFF">Hot<br style="margin-top: 1px">Chocolate<br style="margin-top: 1px">12 oz</button>
+<button class="button" style="border-color: #33CCFF">Hot<br style="margin-top: 1px">Chocolate<br style="margin-top: 1px">16 oz</button>
+<button class="button" style="border-color: #33CCFF">Hot<br style="margin-top: 1px">Chocolate<br style="margin-top: 1px">20 oz</button>
+</a>
+</div>
+
+<div class="split left" id="caramelapplecider">
+<a>
+<button class="button" style="border-color: #33CCFF">Caramel<br style="margin-top: 1px">Apple<br style="margin-top: 1px">Cider 8 oz</button>
+<button class="button" style="border-color: #33CCFF">Caramel<br style="margin-top: 1px">Apple<br style="margin-top: 1px">Cider 12 oz</button>
+<button class="button" style="border-color: #33CCFF">Caramel<br style="margin-top: 1px">Apple<br style="margin-top: 1px">Cider 16 oz</button>
+<button class="button" style="border-color: #33CCFF">Caramel<br style="margin-top: 1px">Apple<br style="margin-top: 1px">Cider 20 oz</button>
+</a>
+</div>
+
+<div class="split left" id="hotwater">
+<a>
+<button class="button">Hot<br style="margin-top: 1px">Water</button>
 </a>
 </div>
 
@@ -412,10 +545,10 @@
 <div class="navbar" id="hotdrinksbottom1">
 <b>
   <a href=# class="gray" onclick="purplebottom2()"><br><img src="arrowup.png" style="width: 33px;"></a>
-  <a href=# id="hotdrinksbar1" onclick="hotdrinks1()">BREWED COFFEE</a>
-  <a href=# id="hotdrinksbar2" onclick="hotdrinks2()">FRENCH PRESS</a>
-  <a href=# id="hotdrinksbar3" onclick="hotdrinks3()">SHOT IN THE DARK</a>
-  <a href=# id="hotdrinksbar4" onclick="hotdrinks4()">CAFE AU LAIT</a>
+  <a href=# id="hotdrinksbar1" onclick="hotdrinks1()" style="border-color: red">BREWED COFFEE</a>
+  <a href=# id="hotdrinksbar2" onclick="hotdrinks2()" style="border-color: red">FRENCH PRESS</a>
+  <a href=# id="hotdrinksbar3" onclick="hotdrinks3()" style="border-color: red">SHOT IN THE DARK</a>
+  <a href=# id="hotdrinksbar4" onclick="hotdrinks4()" style="border-color: red">CAFE AU LAIT</a>
   <a href=# onclick="" style="border-color: white;"></a>
   <a href=# class="gray" onclick="grayhotdrinks2()"><img src="arrowright.png" style="width: 40px;"></a>
 </b>
@@ -424,12 +557,48 @@
 <div class="navbar" id="hotdrinksbottom2">
 <b>
   <a href=# class="gray" onclick="purplebottom2()"><br><img src="arrowup.png" style="width: 33px;"></a>
-  <a href=# id="hotdrinksbar5" onclick="hotdrinks5()">TEA</a>
-  <a href=# id="hotdrinksbar6" onclick="hotdrinks6()">LONDON FOG</a>
-  <a href=# id="hotdrinksbar7" onclick="hotdrinks7()">TEA LATTE</a>
-  <a href=# id="hotdrinksbar8" onclick="hotdrinks8()">CHAI TEA LATTE</a>
-  <a href=# id="hotdrinksbar9" onclick="hotdrinks9()">MATCHA LATTE</a>
-  <a href=# class="gray" onclick="graybottom1()"><img src="arrowright.png" style="width: 40px;"></a>
+  <a href=# id="hotdrinksbar5" onclick="hotdrinks5()" style="border-color: #E15DF0">TEA</a>
+  <a href=# id="hotdrinksbar6" onclick="hotdrinks6()" style="border-color: #E15DF0">LONDON FOG</a>
+  <a href=# id="hotdrinksbar7" onclick="hotdrinks7()" style="border-color: #E15DF0">TEA LATTE</a>
+  <a href=# id="hotdrinksbar8" onclick="hotdrinks8()" style="border-color: #E15DF0">CHAI TEA LATTE</a>
+  <a href=# id="hotdrinksbar9" onclick="hotdrinks9()" style="border-color: #E15DF0">MATCHA LATTE</a>
+  <a href=# class="gray" onclick="grayhotdrinks3()"><img src="arrowright.png" style="width: 40px;"></a>
+</b>
+</div>
+
+<div class="navbar" id="hotdrinksbottom3">
+<b>
+  <a href=# class="gray" onclick="purplebottom2()"><br><img src="arrowup.png" style="width: 33px;"></a>
+  <a href=# id="hotdrinksbar10" onclick="hotdrinks10()" style="font-size:8px; border-color: #F0C65D">AMERICANO/<br style="margin-top: 2px;">LONG BLACK</a>
+  <a href=# id="hotdrinksbar11" onclick="hotdrinks11()" style="border-color: #F0C65D">AMER CON<br style="margin-top: 2px;">MISTO</a>
+  <a href=# id="hotdrinksbar12" onclick="hotdrinks12()" style="border-color: #F0C65D">ESPRESS<br style="margin-top: 2px;">O</a>
+  <a href=# id="hotdrinksbar13" onclick="hotdrinks13()" style="border-color: red">BREVE</a>
+  <a href=# id="hotdrinksbar14" onclick="hotdrinks14()" style="border-color: red">EGGNOG LATTE</a>
+  <a href=# class="gray" onclick="grayhotdrinks4()"><img src="arrowright.png" style="width: 40px;"></a>
+</b>
+</div>
+
+<div class="navbar" id="hotdrinksbottom4">
+<b>
+  <a href=# class="gray" onclick="purplebottom2()"><br><img src="arrowup.png" style="width: 33px;"></a>
+  <a href=# id="hotdrinksbar15" onclick="hotdrinks15()" style="font-size:7px; border-color: red">LATTE/FLAT<br style="margin-top: 2px;">WHITE/CORTADO</a>
+  <a href=# id="hotdrinksbar16" onclick="hotdrinks16()" style="font-size:7px; border-color: red"><br style="margin-top: 5px;">CAPPUCCINO</a>
+  <a href=# id="hotdrinksbar17" onclick="hotdrinks17()" style="font-size:7px; border-color: red">CARAMEL<br style="margin-top: 2px;">MACCHIATO</a>
+  <a href=# id="hotdrinksbar18" onclick="hotdrinks18()" style="border-color: red">MOCHA</a>
+  <a href=# id="hotdrinksbar19" onclick="hotdrinks19()" style="font-size:7px; border-color: red">PUMPKIN<br style="margin-top: 2px;">SPICE LATTE</a>
+  <a href=# class="gray" onclick="grayhotdrinks5()"><img src="arrowright.png" style="width: 40px;"></a>
+</b>
+</div>
+
+<div class="navbar" id="hotdrinksbottom5">
+<b>
+  <a href=# class="gray" onclick="purplebottom2()"><br><img src="arrowup.png" style="width: 33px;"></a>
+  <a href=# id="hotdrinksbar20" onclick="hotdrinks20()" style="border-color: #33CCFF">STEAMED<br style="margin-top: 2px;">MILK</a>
+  <a href=# id="hotdrinksbar21" onclick="hotdrinks21()" style="font-size:8.5px; border-color: #33CCFF">HOT<br style="margin-top: 2px;">CHOCOLATE</a>
+  <a href=# id="hotdrinksbar22" onclick="hotdrinks22()" style="font-size:7.5px; border-color: #33CCFF">CARAMEL<br style="margin-top: 2px;">APPLE CIDER</a>
+  <a href=# id="hotdrinksbar23" onclick="hotdrinks23()" style="border-color: #33CCFF">HOT<br style="margin-top: 2px;">WATER</a>
+  <a href=# onclick="" style="border-color: white;"></a>
+  <a href=# class="gray" onclick="grayhotdrinks2()"><img src="arrowright.png" style="width: 40px;"></a>
 </b>
 </div>
 
